--- a/docs/tracing.adoc
+++ b/docs/tracing.adoc
@@ -139,8 +139,8 @@ Let's re-build and re-deploy the application:
 [source,sh,role="copypaste"]
 ----
 mvn clean package -DskipTests && \
-oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
-oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
+oc label deployment/people app.kubernetes.io/part-of=people --overwrite && \
+oc annotate deployment/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
 
 == Confirm deployment
@@ -149,7 +149,7 @@ Run and wait for the app to complete its rollout:
 
 [source,sh,role="copypaste"]
 ----
-oc rollout status -w dc/people
+oc rollout status -w deployment/people
 ----
 
 == Trigger traces
@@ -335,8 +335,8 @@ Let's re-build and re-deploy the application:
 [source,sh,role="copypaste"]
 ----
 mvn clean package -DskipTests && \
-oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
-oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
+oc label deployment/people app.kubernetes.io/part-of=people --overwrite && \
+oc annotate deployment/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
 
 == Confirm deployment
@@ -345,7 +345,7 @@ Run and wait for the app to complete its rollout:
 
 [source,sh,role="copypaste"]
 ----
-oc rollout status -w dc/people
+oc rollout status -w deployment/people
 ----
 
 == Trigger traces
