--- a/docs/monitoring.adoc
+++ b/docs/monitoring.adoc
@@ -251,8 +251,8 @@ Run the following command which will build and deploy using the OpenShift extens
 [source,sh,role="copypaste"]
 ----
 mvn clean package -DskipTests && \
-oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
-oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
+oc label deployment/people app.kubernetes.io/part-of=people --overwrite && \
+oc annotate deployment/people app.openshift.io/connects-to=postgres-database --overwrite
 ----
 
 == Confirm deployment
@@ -261,7 +261,7 @@ Once the build completes, ensure the app completes its redeployment with this co
 
 [source,sh,role="copypaste"]
 ----
-oc rollout status -w dc/people
+oc rollout status -w deployment/people
 ----
 
 == Test
